--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -2,3 +2,12 @@ main{
     background-color: #9D9D9D;
     border-radius: 10px 10px 10px 10px ;
 }
+
+#messagebox{
+    background-color: #FFFFFF;
+}
+
+.boxMassage{
+    border: 1px solid #000000;
+    margin-top: 1px;
+}
