--- a/2-labbymezzage/css/style.css
+++ b/2-labbymezzage/css/style.css
@@ -30,6 +30,32 @@ main{
     border-radius: 10px 10px 10px 10px;
 }
 
+.delete{
+    display: block;
+    float:left;
+    background: url("../pics/edit_delete.png") no-repeat;
+    background-size:25px;
+    background-position:center center;
+    height: 25px;
+    width: 25px;
+    margin:0 5px 10px 5px;
+    
+}
+
+.time{
+    display: block;
+    float:left;
+    background: url("../pics/clock.png") no-repeat;
+    background-size: 25px;
+    background-position: center center;
+    width: 25px;
+    height: 25px;
+}
+
+.clear{
+    clear:both;
+}
+
 body{
     background-color: #2E2E2E;
 }
