--- a/4-forms/style.css
+++ b/4-forms/style.css
@@ -16,3 +16,13 @@ html{
     width: 100%;
     height: 100%;
 }
+
+.displaynone{
+    display: none;
+    visibility: hidden;
+}
+
+.displayshow{
+    display: block;
+    visibility: visible;
+}
