--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -34,6 +34,17 @@
     margin:0 5px 10px 5px;
 }
 
+.image{
+    display: block;
+    float: left;
+    background: url("../pics/leftpicture.png") no-repeat;
+    background-size:25px;
+    background-position:center center;
+    height: 25px;
+    width: 25px;
+    margin:0 5px 10px 5px;
+}
+
 #img{
     margin-top: 1%;
 }
