--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -20,7 +20,22 @@
 }
 
 .article{
-    width: 20%;
+    width: 350px;
+    height: 300px;
+    background: red;
+}
+
+.aside{
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    background: red;
+}
+
+.footer{
+    width: 100%;
+    height: 20px;
+    background: black;
 }
 
 .delete{
@@ -43,6 +58,20 @@
     height: 25px;
     width: 25px;
     margin:0 5px 10px 5px;
+}
+
+.box{
+    float: left;
+    width: 100px;
+    height: 80px;
+    margin: 4.6px;
+    line-height: 80px;
+    text-align: center;
+    background: black;
+}
+
+.thumb{
+    vertical-align: middle;
 }
 
 #img{
