kört fast på projektet

--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -64,6 +64,7 @@
     float: left;
     width: 100px;
     height: 80px;
+    /*padding: 10px;*/
     margin: 4.6px;
     line-height: 80px;
     text-align: center;
