--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -20,8 +20,10 @@
 }
 
 .article{
-    width: 350px;
-    height: 300px;
+    min-width: 350px;
+    min-height: 300px;
+    max-width: 700px;
+    max-height: 600px;
     background: red;
 }
 
@@ -72,6 +74,10 @@
     margin-bottom: 7px;
 }
 
+.URL{
+    width: 100%;
+    height: 100%;
+}
 #img{
     margin-top: 1%;
 }
