--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -24,6 +24,7 @@
     min-height: 300px;
     max-width: 700px;
     max-height: 600px;
+    position: absolute;
     background: red;
 }
 
@@ -31,6 +32,7 @@
     width: 100%;
     height: 100%;
     overflow-y: auto;
+    overflow: auto;
     background: red;
 }
 
@@ -78,6 +80,11 @@
     width: 100%;
     height: 100%;
 }
+
+.rssFeed{
+    overflow: auto;
+}
+
 #img{
     margin-top: 1%;
 }
