--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -10,6 +10,7 @@
 }
 body{
     overflow: hidden;
+    background-image: url(../pics/wallpaper.png);    
 }
 .main{
     width: 100%;
@@ -17,31 +18,38 @@ body{
 }
 
 .header{
-    background-color: red;
+    background-color: #2E2E2E;
+    border-radius: 10px 10px 0 0;
+    color: white;
     opacity: 0.9;
 }
 
 .article{
-    min-width: 350px;
-    min-height: 300px;
+    min-width: 250px;
+    min-height: 200px;
     max-width: 700px;
     max-height: 600px;
+    border-radius: 10px 10px 10px 10px;
     position: absolute;
-    background: red;
+    background: #D9D9D9;
+    border: 1px black solid;
     z-index: 1;
 }
 
 .aside{
     width: 100%;
-    height: 100%;
+    min-height: 50%;
+    max-height: 100%;
+    border-radius: 10px 10px 10px 10px;
     overflow-y: auto;
-    background: red;
+    background: #D9D9D9;
 }
 
 .footer{
     width: 100%;
     height: 20px;
-    background: black;
+    border-radius: 0 0 10px 10px;
+    background: #2E2E2E;
 }
 
 .delete{
