--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -2,15 +2,13 @@
     width: 100%;
     height: 8%;
     background: black;
-    position: absolute;
-    top: 90%;
-    margin: 0;
+    margin-top: 52%;
     padding: 0;
     opacity: 0.7;
 }
 body{
     overflow: hidden;
-    background-image: url(../pics/wallpaper.png);    
+    background-image: url("../pics/donatello.jpg");    
 }
 .main{
     width: 100%;
