--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -1,12 +1,3 @@
-.bottom{
-    width: 100%;
-    height: 8%;
-    background: black;
-    margin-top: 52%;
-    padding: 0;
-    opacity: 0.8;
-}
-
 body{
     overflow: hidden;
     background-image: url("../pics/donatello.jpg");    
@@ -19,6 +10,35 @@ h2{
     color: #BABDBD;
 }
 
+.bottom{
+    width: 100%;
+    height: 8%;
+    margin-top: 47%;
+    background: black;
+    padding: 0;
+    opacity: 0.8;
+    position: fixed;
+}
+
+.bottom a{
+    float: left;
+    z-index: 0;
+    -webkit-transition: 1s ease;
+    -moz-transition: 1s ease;
+    -o-transition: 1s ease;
+    transition: 1s ease;
+}
+
+.bottom a:hover{
+    -webkit-transform: scale(1.4);
+    -moz-transform: scale(1.4);
+    -o-transform: scale(1.4);
+    -ms-transform: scale(1.4);
+    transform: scale(1.4);
+    
+    z-index: 10;
+}
+
 .main{
     width: 100%;
     height: 100%;
@@ -29,6 +49,15 @@ h2{
     border-radius: 10px 10px 0 0;
     color: white;
     opacity: 0.9;
+}
+
+.header a:hover{
+    background: url("../pics/dialog_cancel.png") no-repeat;
+    background-size:25px;
+    background-position:center center;
+    height: 25px;
+    width: 25px;
+    margin:0 5px 10px 5px;
 }
 
 .article{
@@ -62,7 +91,7 @@ h2{
 .delete{
     display: block;
     float: right;
-    background: url("../pics/fileclose.png") no-repeat;
+    background: url("../pics/dialog_close.png") no-repeat;
     background-size:25px;
     background-position:center center;
     height: 25px;
@@ -109,8 +138,4 @@ h2{
 .game{
     height: 32px;
     width: 32px;
-}
-
-#img{
-    margin-top: 1%;
 }
