--- a/5-pwd/css/style.css
+++ b/5-pwd/css/style.css
@@ -1,6 +1,6 @@
 body{
     overflow: hidden;
-    background-image: url("../pics/donatello.jpg");    
+    background-image: url("../pics/background.jpg");    
 }
 
 h2{
@@ -13,7 +13,7 @@ h2{
 .bottom{
     width: 100%;
     height: 8%;
-    margin-top: 47%;
+    margin-top: 52%;
     background: black;
     padding: 0;
     opacity: 0.8;
